delais MED tread

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -154,7 +154,7 @@
                 <li [style.display]="authService.isResponsableRecouvrement() || authService.isAgentRecouvrement()?'block':'none'">
                   <a class="has-arrow" href="javascript:void(0)" aria-expanded="false"><i class="icon icon-wallet"></i><span class="hide-menu">Gestion Mise en <br/>demeure</span></a>
                   <ul aria-expanded="false" class="collapse">
-                    <li><a [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" routerLink="fontawesome">Fontawesome</a></li>
+                    <li><a [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" routerLink="med">Liste MED</a></li>
                   </ul>
                 </li>
 
